Flutter/callkit/desktop_bridge/include/ne_call_bridge.h

typedef void* NECallBridgeHandle;
typedef void (*NECallBridgeEventCallback)(const NECallBridgeEvent* event,
                                          void* user_data);
typedef struct {
  const char* app_key;
  const char* framework;
  const char* channel;
  uint64_t current_user_rtc_uid;
  uint8_t enable_join_rtc_when_call;
  int32_t init_rtc_mode;
  int32_t preferred_video_render_mode;
} NECallBridgeSetupConfig;
typedef struct {
  const char* acc_id;
  int32_t call_type;
  const char* extra_info;
  const char* rtc_channel_name;
  const char* global_extra_copy;
  const NECallBridgePushConfig* push_config;
} NECallBridgeCallParam;
typedef struct {
  const char* channel_id;
  const char* extra_string;
} NECallBridgeHangupParam;
typedef struct {
  bool enable_offline;
  bool enable_switch_video_confirm;
  bool enable_switch_audio_confirm;
} NECallBridgeConfigParam;
typedef struct {
  const char* user_id;
  uint64_t rtc_uid;
} NECallBridgeUserInfoParam;
typedef void (*NECallBridgeCallCompletion)(
    const NECallBridgeError* error,
    const NECallBridgeCallInfoParam* call_info,
    void* user_data);
typedef void (*NECallBridgeHangupCompletion)(const NECallBridgeError* error,
                                             void* user_data);
NECallBridgeHandle ne_call_bridge_create(void);
void ne_call_bridge_destroy(void);
int32_t ne_call_bridge_setup(NECallBridgeHandle handle,
                             const NECallBridgeSetupConfig* config);
int32_t ne_call_bridge_call(NECallBridgeHandle handle,
                            const NECallBridgeCallParam* param,
                            NECallBridgeCallCompletion completion,
                            void* user_data);
int32_t ne_call_bridge_accept(NECallBridgeHandle handle,
                              NECallBridgeCallCompletion completion,
                              void* user_data);
// Aligned with iOS `hangup`: the bridge resolves outgoing cancel, incoming
// reject, and in-call hangup by current state.
int32_t ne_call_bridge_hangup(NECallBridgeHandle handle,
                              const NECallBridgeHangupParam* param,
                              NECallBridgeHangupCompletion completion,
                              void* user_data);
int32_t ne_call_bridge_get_version(NECallBridgeHandle handle,
                                   char* version_buffer,
                                   uint32_t buffer_len);
int32_t ne_call_bridge_set_timeout(NECallBridgeHandle handle, int32_t seconds);
int32_t ne_call_bridge_switch_call_type(NECallBridgeHandle handle,
                                        int32_t call_type,
                                        int32_t state);
int32_t ne_call_bridge_set_call_config(NECallBridgeHandle handle,
                                       const NECallBridgeConfigParam* param);
int32_t ne_call_bridge_get_call_config(NECallBridgeHandle handle,
                                       NECallBridgeConfigParam* param);
int32_t ne_call_bridge_get_call_info(NECallBridgeHandle handle,
                                     NECallBridgeCallInfoParam* param);
int32_t ne_call_bridge_set_call_record_provider(NECallBridgeHandle handle,
                                                uint8_t enabled);
int32_t ne_call_bridge_enable_local_video(NECallBridgeHandle handle,
                                          uint8_t enabled);
int32_t ne_call_bridge_mute_local_video(NECallBridgeHandle handle,
                                        uint8_t muted);
int32_t ne_call_bridge_mute_local_audio(NECallBridgeHandle handle,
                                        uint8_t muted);
int32_t ne_call_bridge_switch_camera(NECallBridgeHandle handle);
int32_t ne_call_bridge_set_speakerphone_on(NECallBridgeHandle handle,
                                           uint8_t enabled);
int32_t ne_call_bridge_is_speakerphone_on(NECallBridgeHandle handle,
                                          uint8_t* enabled);
int32_t ne_call_bridge_setup_local_video_renderer(NECallBridgeHandle handle,
                                                  int64_t renderer_id);
int32_t ne_call_bridge_setup_remote_video_renderer(NECallBridgeHandle handle,
                                                   int64_t renderer_id);
int32_t ne_call_bridge_setup_remote_video_renderer_with_uid(
    NECallBridgeHandle handle,
    uint64_t rtc_uid,
    int64_t renderer_id);
int32_t ne_call_bridge_set_video_renderer_mirror(NECallBridgeHandle handle,
                                                 int64_t renderer_id,
                                                 uint8_t mirror);
int32_t ne_call_bridge_get_user_with_rtc_uid(NECallBridgeHandle handle,
                                             uint64_t rtc_uid,
                                             NECallBridgeUserInfoParam* param);
int32_t ne_call_bridge_list_video_capture_devices(NECallBridgeHandle handle,
                                                  char* devices_json_buffer,
                                                  uint32_t buffer_len,
                                                  uint32_t* out_required_len);
int32_t ne_call_bridge_get_current_video_capture_device(
    NECallBridgeHandle handle,
    char* device_id_buffer,
    uint32_t buffer_len,
    uint32_t* out_required_len);
int32_t ne_call_bridge_set_video_capture_device(NECallBridgeHandle handle,
                                                const char* device_id);
int32_t ne_call_bridge_list_audio_recording_devices(NECallBridgeHandle handle,
                                                    char* devices_json_buffer,
                                                    uint32_t buffer_len,
                                                    uint32_t* out_required_len);
int32_t ne_call_bridge_get_current_audio_recording_device(
    NECallBridgeHandle handle,
    char* device_id_buffer,
    uint32_t buffer_len,
    uint32_t* out_required_len);
int32_t ne_call_bridge_set_audio_recording_device(NECallBridgeHandle handle,
                                                  const char* device_id);
int32_t ne_call_bridge_list_audio_playback_devices(NECallBridgeHandle handle,
                                                   char* devices_json_buffer,
                                                   uint32_t buffer_len,
                                                   uint32_t* out_required_len);
int32_t ne_call_bridge_get_current_audio_playback_device(
    NECallBridgeHandle handle,
    char* device_id_buffer,
    uint32_t buffer_len,
    uint32_t* out_required_len);
int32_t ne_call_bridge_set_audio_playback_device(NECallBridgeHandle handle,
                                                 const char* device_id);
int32_t ne_call_bridge_register_event_callback(NECallBridgeHandle handle,
                                               NECallBridgeEventCallback callback,
                                               void* user_data);
// Releases events delivered by `ne_call_bridge_register_event_callback`.
void ne_call_bridge_release_event(const NECallBridgeEvent* event);