Flutter/callkit/desktop_bridge/include/ne_call_bridge_version.h

// Returns the full capability bitmask for the current bridge build.
uint64_t ne_call_bridge_get_capabilities(void);
// Returns 1 only when all requested capability bits are supported.
int32_t ne_call_bridge_supports_capability(uint64_t capability);