Flutter/callkit/lib/src/desktop/ffi_bindings.dart


class NECallBridgeConnectedPayloadNative extends Struct {
  external Pointer<Utf8> callId;
  external Pointer<Utf8> currentAccId;
  external NECallBridgeCallUserInfoNative callerInfo;
  external NECallBridgeCallUserInfoNative calleeInfo;

  @Int32()
  external int callType;

  external NECallBridgeSignalInfoNative signalInfo;
  external NECallBridgeRtcInfoNative rtcInfo;

  @Int32()
  external int callStatus;
}

class NECallBridgeEndPayloadNative extends Struct {
  @Int32()
  external int reasonCode;

  external Pointer<Utf8> extraString;
  external Pointer<Utf8> message;
}

class NECallBridgeTypeChangePayloadNative extends Struct {
  @Uint64()
  external int callId;

  @Int32()
  external int callType;

  @Uint64()
  external int timestampMs;
}

class NECallBridgeVideoAvailablePayloadNative extends Struct {
  @Uint64()
  external int callId;

  external Pointer<Utf8> userId;

  @Uint8()
  external int available;

  @Uint64()
  external int timestampMs;
}

class NECallBridgeVideoMutedPayloadNative extends Struct {
  @Uint64()
  external int callId;

  external Pointer<Utf8> userId;

  @Uint8()
  external int muted;

  @Uint64()
  external int timestampMs;
}

class NECallBridgeAudioMutedPayloadNative extends Struct {
  @Uint64()
  external int callId;

  external Pointer<Utf8> userId;

  @Uint8()
  external int muted;

  @Uint64()
  external int timestampMs;
}

class NECallBridgeDebugLogPayloadNative extends Struct {
  @Uint64()
  external int callId;

  external Pointer<Utf8> message;

  @Uint64()
  external int timestampMs;
}

class NECallBridgeLocalAudioMutedPayloadNative extends Struct {
  @Uint64()
  external int callId;

  @Uint8()
  external int muted;

  @Uint64()
  external int timestampMs;
}

class NECallBridgeRtcInitEndPayloadNative extends Struct {
  @Uint64()
  external int callId;

  @Uint64()
  external int timestampMs;
}

class NECallBridgeRecordSendPayloadNative extends Struct {
  @Uint64()
  external int callId;

  external Pointer<Utf8> accId;

  @Int32()
  external int callType;

  @Int32()
  external int callState;

  @Uint64()
  external int timestampMs;
}

class NECallBridgeRtcRawPayloadNative extends Struct {
  external Pointer<Utf8> eventName;
  external Pointer<Utf8> jsonData;
}

class NECallBridgeEventPayloadNative extends Union {
  external NECallBridgeInvitedPayloadNative invited;
  external NECallBridgeConnectedPayloadNative connected;
  external NECallBridgeEndPayloadNative ended;
  external NECallBridgeTypeChangePayloadNative typeChanged;
  external NECallBridgeVideoAvailablePayloadNative videoAvailable;
  external NECallBridgeVideoMutedPayloadNative videoMuted;
  external NECallBridgeAudioMutedPayloadNative audioMuted;
  external NECallBridgeDebugLogPayloadNative debugLog;
  external NECallBridgeLocalAudioMutedPayloadNative localAudioMuted;
  external NECallBridgeRtcInitEndPayloadNative rtcInitEnd;
  external NECallBridgeRecordSendPayloadNative recordSend;
  external NECallBridgeRtcRawPayloadNative rtcRaw;
}

class NECallBridgeEventNative extends Struct {
  @Int32()
  external int type;

  external NECallBridgeEventPayloadNative payload;
}

class DesktopFfiBindings {
  DesktopFfiBindings._(DynamicLibrary dynamicLibrary)
      : create = dynamicLibrary.lookupFunction<NeCallBridgeCreateNative,
            NeCallBridgeCreateDart>('ne_call_bridge_create'),
        destroy = dynamicLibrary.lookupFunction<NeCallBridgeDestroyNative,
            NeCallBridgeDestroyDart>('ne_call_bridge_destroy'),
        setup = dynamicLibrary.lookupFunction<NeCallBridgeSetupNative,
            NeCallBridgeSetupDart>('ne_call_bridge_setup'),
        call = dynamicLibrary.lookupFunction<NeCallBridgeCallNative,
            NeCallBridgeCallDart>('ne_call_bridge_call'),
        accept = dynamicLibrary.lookupFunction<NeCallBridgeAcceptNative,
            NeCallBridgeAcceptDart>('ne_call_bridge_accept'),
        hangup = dynamicLibrary.lookupFunction<NeCallBridgeHangupNative,
            NeCallBridgeHangupDart>('ne_call_bridge_hangup'),
        releaseError = dynamicLibrary.lookupFunction<
            NeCallBridgeReleaseErrorNative,
            NeCallBridgeReleaseErrorDart>('ne_call_bridge_release_error'),
        releaseCallInfo = dynamicLibrary.lookupFunction<
                NeCallBridgeReleaseCallInfoNative,
                NeCallBridgeReleaseCallInfoDart>(
            'ne_call_bridge_release_call_info'),
        getVersion = dynamicLibrary.lookupFunction<NeCallBridgeGetVersionNative,
            NeCallBridgeGetVersionDart>('ne_call_bridge_get_version'),
        setTimeout = dynamicLibrary.lookupFunction<NeCallBridgeSetTimeoutNative,
            NeCallBridgeSetTimeoutDart>('ne_call_bridge_set_timeout'),
        switchCallType = dynamicLibrary.lookupFunction<
            NeCallBridgeSwitchCallTypeNative,
            NeCallBridgeSwitchCallTypeDart>('ne_call_bridge_switch_call_type'),
        setCallConfig = dynamicLibrary.lookupFunction<
            NeCallBridgeSetCallConfigNative,
            NeCallBridgeSetCallConfigDart>('ne_call_bridge_set_call_config'),
        getCallConfig = dynamicLibrary.lookupFunction<
            NeCallBridgeGetCallConfigNative,
            NeCallBridgeGetCallConfigDart>('ne_call_bridge_get_call_config'),
        getCallInfo = dynamicLibrary.lookupFunction<
            NeCallBridgeGetCallInfoNative,
            NeCallBridgeGetCallInfoDart>('ne_call_bridge_get_call_info'),
        setCallRecordProvider = dynamicLibrary.lookupFunction<
                NeCallBridgeSetCallRecordProviderNative,
                NeCallBridgeSetCallRecordProviderDart>(
            'ne_call_bridge_set_call_record_provider'),
        enableLocalVideo = dynamicLibrary.lookupFunction<
                NeCallBridgeEnableLocalVideoNative,
                NeCallBridgeEnableLocalVideoDart>(
            'ne_call_bridge_enable_local_video'),
        muteLocalVideo = dynamicLibrary.lookupFunction<
            NeCallBridgeMuteLocalVideoNative,
            NeCallBridgeMuteLocalVideoDart>('ne_call_bridge_mute_local_video'),
        muteLocalAudio = dynamicLibrary.lookupFunction<
            NeCallBridgeMuteLocalAudioNative,
            NeCallBridgeMuteLocalAudioDart>('ne_call_bridge_mute_local_audio'),
        switchCamera = dynamicLibrary.lookupFunction<
            NeCallBridgeSwitchCameraNative,
            NeCallBridgeSwitchCameraDart>('ne_call_bridge_switch_camera'),
        setSpeakerphoneOn = dynamicLibrary.lookupFunction<
                NeCallBridgeSetSpeakerphoneOnNative,
                NeCallBridgeSetSpeakerphoneOnDart>(
            'ne_call_bridge_set_speakerphone_on'),
        isSpeakerphoneOn = dynamicLibrary.lookupFunction<
                NeCallBridgeIsSpeakerphoneOnNative,
                NeCallBridgeIsSpeakerphoneOnDart>(
            'ne_call_bridge_is_speakerphone_on'),
        registerEventCallback = dynamicLibrary.lookupFunction<
                NeCallBridgeRegisterEventCallbackNative,
                NeCallBridgeRegisterEventCallbackDart>(
            'ne_call_bridge_register_event_callback'),
        releaseEvent = dynamicLibrary.lookupFunction<
            NeCallBridgeReleaseEventNative,
            NeCallBridgeReleaseEventDart>('ne_call_bridge_release_event'),
        setupLocalVideoRenderer = dynamicLibrary.lookupFunction<
                NeCallBridgeSetupLocalVideoRendererNative,
                NeCallBridgeSetupLocalVideoRendererDart>(
            'ne_call_bridge_setup_local_video_renderer'),
        setupRemoteVideoRenderer = dynamicLibrary.lookupFunction<
                NeCallBridgeSetupRemoteVideoRendererNative,
                NeCallBridgeSetupRemoteVideoRendererDart>(
            'ne_call_bridge_setup_remote_video_renderer'),
        setupRemoteVideoRendererWithUid = dynamicLibrary.lookupFunction<
                NeCallBridgeSetupRemoteVideoRendererWithUidNative,
                NeCallBridgeSetupRemoteVideoRendererWithUidDart>(
            'ne_call_bridge_setup_remote_video_renderer_with_uid'),
        setVideoRendererMirror = dynamicLibrary.lookupFunction<
                NeCallBridgeSetVideoRendererMirrorNative,
                NeCallBridgeSetVideoRendererMirrorDart>(
            'ne_call_bridge_set_video_renderer_mirror'),
        getUserWithRtcUid = dynamicLibrary.lookupFunction<
                NeCallBridgeGetUserWithRtcUidNative,
                NeCallBridgeGetUserWithRtcUidDart>(
            'ne_call_bridge_get_user_with_rtc_uid'),
        listVideoCaptureDevices = dynamicLibrary.lookupFunction<
                NeCallBridgeListVideoCaptureDevicesNative,
                NeCallBridgeListVideoCaptureDevicesDart>(
            'ne_call_bridge_list_video_capture_devices'),
        getCurrentVideoCaptureDevice = dynamicLibrary.lookupFunction<
                NeCallBridgeGetCurrentVideoCaptureDeviceNative,
                NeCallBridgeGetCurrentVideoCaptureDeviceDart>(
            'ne_call_bridge_get_current_video_capture_device'),
        setVideoCaptureDevice = dynamicLibrary.lookupFunction<
                NeCallBridgeSetVideoCaptureDeviceNative,
                NeCallBridgeSetVideoCaptureDeviceDart>(
            'ne_call_bridge_set_video_capture_device'),
        listAudioRecordingDevices = dynamicLibrary.lookupFunction<
                NeCallBridgeListAudioRecordingDevicesNative,
                NeCallBridgeListAudioRecordingDevicesDart>(
            'ne_call_bridge_list_audio_recording_devices'),
        getCurrentAudioRecordingDevice = dynamicLibrary.lookupFunction<
                NeCallBridgeGetCurrentAudioRecordingDeviceNative,
                NeCallBridgeGetCurrentAudioRecordingDeviceDart>(
            'ne_call_bridge_get_current_audio_recording_device'),
        setAudioRecordingDevice = dynamicLibrary.lookupFunction<
                NeCallBridgeSetAudioRecordingDeviceNative,
                NeCallBridgeSetAudioRecordingDeviceDart>(
            'ne_call_bridge_set_audio_recording_device'),
        listAudioPlaybackDevices = dynamicLibrary.lookupFunction<
                NeCallBridgeListAudioPlaybackDevicesNative,
                NeCallBridgeListAudioPlaybackDevicesDart>(
            'ne_call_bridge_list_audio_playback_devices'),
        getCurrentAudioPlaybackDevice = dynamicLibrary.lookupFunction<
                NeCallBridgeGetCurrentAudioPlaybackDeviceNative,
                NeCallBridgeGetCurrentAudioPlaybackDeviceDart>(
            'ne_call_bridge_get_current_audio_playback_device'),
        setAudioPlaybackDevice = dynamicLibrary.lookupFunction<
                NeCallBridgeSetAudioPlaybackDeviceNative,
                NeCallBridgeSetAudioPlaybackDeviceDart>(
            'ne_call_bridge_set_audio_playback_device'),
        getCapabilities = dynamicLibrary.lookupFunction<
            NeCallBridgeGetCapabilitiesNative,
            NeCallBridgeGetCapabilitiesDart>('ne_call_bridge_get_capabilities'),
        supportsCapability = dynamicLibrary.lookupFunction<
                NeCallBridgeSupportsCapabilityNative,
                NeCallBridgeSupportsCapabilityDart>(
            'ne_call_bridge_supports_capability');
